Add ReadMe Generator project card with image and description

--- a/index.html
+++ b/index.html
@@ -483,6 +483,43 @@
                 </span>
               </div>
             </div>
+            <div class="project-card">
+              <img
+                src="./assets/projects/readmegen.png"
+                alt="ReadMe Generator"
+                class="project-image"
+              />
+              <h3 class="project-title">100 Days of Projects</h3>
+              <p class="project-description">
+                This project, readme-generator, aims to simplify the process of
+                creating comprehensive README files for GitHub repositories.
+              </p>
+              <div class="buttons-projects">
+                <a
+                  href="#"
+                  class="btn btn--primary project-link --disabled"
+                  target="_blank"
+                  >Live Demo</a
+                >
+                <a
+                  href="https://github.com/toko-stark/readme-generator"
+                  class="btn btn--primary github-link"
+                  target="_blank"
+                  >View Code</a
+                >
+              </div>
+              <div class="techstack-project">
+                <span class="techstack-item">
+                  <span class="techstack-text">JavaScript</span>
+                </span>
+                <span class="techstack-item">
+                  <span class="techstack-text">HTML</span>
+                </span>
+                <span class="techstack-item">
+                  <span class="techstack-text">CSS</span>
+                </span>
+              </div>
+            </div>
           </div>
         </div>
       </section>
